[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Jogo.gd" type="Script" id=1]
[ext_resource path="res://assets/Nave b.png" type="Texture" id=2]
[ext_resource path="res://assets/Nave w.png" type="Texture" id=3]
[ext_resource path="res://assets/bg.png" type="Texture" id=4]
[ext_resource path="res://assets/fogo.png" type="Texture" id=5]
[ext_resource path="res://assets/parede.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 351, 66 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 510, 303 )
scale = Vector2( 0.369444, 0.369444 )
texture = ExtResource( 4 )

[node name="Fogo" type="Sprite" parent="."]
position = Vector2( 102.375, 320 )
scale = Vector2( 0.140795, 0.161765 )
texture = ExtResource( 5 )

[node name="Foguete" type="Sprite" parent="."]
position = Vector2( 287, 470 )
scale = Vector2( 0.0986841, 0.0986841 )
texture = ExtResource( 2 )

[node name="Foguete2" type="Sprite" parent="."]
position = Vector2( 790, 462 )
scale = Vector2( 0.0978802, 0.0978802 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 38.0
margin_top = 304.0
margin_right = 167.0
margin_bottom = 336.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Parede" type="Sprite" parent="."]
position = Vector2( 294, -6.99982 )
scale = Vector2( 0.386602, 0.386602 )
texture = ExtResource( 6 )

[node name="Parede2" type="Sprite" parent="."]
position = Vector2( 768.787, -6 )
scale = Vector2( 0.384659, 0.386602 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 768.787, -5.99997 )
scale = Vector2( 0.384659, 0.386602 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -612.977, 7.75985 )
scale = Vector2( 2.59971, 2.58664 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = 23.0
margin_right = 141.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.0431373, 0.00392157, 0.00392157, 1 )
custom_colors/font_outline_modulate = Color( 0.0470588, 0.00392157, 0.00392157, 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 896.0
margin_top = 22.0
margin_right = 1002.0
margin_bottom = 71.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
